--- a/Equidna/Views/Home/Linear.cshtml
+++ b/Equidna/Views/Home/Linear.cshtml
@@ -839,7 +839,7 @@
 
 
     }
-    // lo que se muetra al principio
+    // movimiento del slider
     function primeragrafi() {
         value = positionFunction.evaluate(currentTime);
         slider.setValue(value);
